# lidar_obstacle_detect

./: CMakeLists.txt  README.md  package.xml
config/: lidar_obstacle_detection.yaml
launch/: lidar_obstacle_detection.launch
lib/bounding_box/: CMakeLists.txt  bounding_box.cpp  bounding_box.h
lib/euclidean_cluster/: CMakeLists.txt  euclidean_cluster.cpp  euclidean_cluster.h
lib/ground_detector/patchwork/: CMakeLists.txt  patchwork.cpp  patchwork.h
lib/pre_process/roi_clip/: CMakeLists.txt  roi_clip.cpp  roi_clip.h
lib/pre_process/voxel_grid_filter/: CMakeLists.txt  voxel_grid_filter.cpp  voxel_grid_filter.h
lib/visualization/: CMakeLists.txt  visualize_detected_objects.cpp  visualize_detected_objects.h
md/: cluster.md
rviz/: lidar_obstacle_detection.rviz
src/: lidar_obstacle_detection.cpp  lidar_obstacle_detection.h  lidar_obstacle_detection_node.cpp
